<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AF55F7"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/List_Answer"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:gravity="left"
        android:hint="@string/hint_last_answer"
        android:freezesText="true" />

    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:ems="10"
        android:hint="@string/hint_number1"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.1000000" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:ems="10"
        android:hint="@string/hint_number2"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1"
        app:layout_constraintVertical_bias="0.01" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/plus_but"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:onClick="Plus_button"
            android:text="@string/button_plus_text" />

        <Button
            android:id="@+id/minus_but"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:onClick="Minus_button"
            android:text="@string/button_minus_text" />

        <Button
            android:id="@+id/mul_but"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:onClick="Multable_button"
            android:text="@string/button_mul_text" />

        <Button
            android:id="@+id/del_but"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:contentDescription="@string/button_del_text"
            android:onClick="Del_button"
            android:text="@string/button_del_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result_of_op"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:hint="@string/hint_result"
            android:freezesText="true" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="Answer_button"
            android:text="@string/button_last_Ans" />
    </LinearLayout>

</LinearLayout>